# weekend-ray

./: Cargo.toml  README.md  cover.json  cover_no_defocus.json  dielectric.json  input.json  input2.json
scenes/: dielectric.json  input2.json  moving_cover.json
src/: camera.rs  color.rs  hittable.rs  main.rs  ray.rs  sphere.rs  vec3d.rs  world.rs
src/acceleration/: aabb.rs  bvh_node.rs  mod.rs
src/core/: color.rs  hittable.rs  mod.rs  ray.rs  vec3d.rs
src/gemeometry/: mod.rs  sphere.rs  world.rs
src/material/: dielectric.rs  lamertian.rs  material.rs  metal.rs  mod.rs
