[package]
name = "weekend-ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = { git = "https://github.com/carbotaniuman/auto_ops", rev = "74d97b4" }
clap = { version = "4.3.19", features = ["derive"] }
humantime = "2.1.0"
png = "0.17.9"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
